<resources>
    <string name="app_name">Rental_Services</string>
    <string name="button_icon_desc">Add</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kode">Hello</string>
    <string name="kategori">category</string>
    <string name="isi">details</string>
    <string name="login">LOGIN</string>
    <string name="swipe_left_for_register">Swipe left for register</string>
    <string name="tag">Lets help the environment</string>
    <string name="register">Register</string>
    <string name="your_name">your name</string>
    <string name="e_mail">email</string>
    <string name="yourAddress">Please insert your address</string>
    <string name="next">Confirm/Next</string>
    <string name="payment">Choose a payment method</string>
    <string name="addProduct">Add</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
</resources>