<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="96dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="12dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:id="@+id/card_listofAllItems"
    app:cardCornerRadius="10dp"
    app:cardBackgroundColor="@color/white"
    app:contentPadding="5dp"
    android:foreground="?selectableItemBackground"
    android:clickable="true"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="280dp"
        android:layout_height="86dp"
        android:layout_gravity="right
"
        android:background="@android:color/transparent">


        <TextView
            android:id="@+id/model"
            android:layout_width="65dp"
            android:layout_height="36dp"
            android:fontFamily="@font/roboto"
            android:gravity="top"
            android:text="@string/isi"
            android:textColor="@color/colorGrey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.098" />

        <TextView
            android:id="@+id/brand"
            android:layout_width="84dp"
            android:layout_height="28dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/kategori"
            android:textColor="@color/colorGrey"
            android:textSize="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.163"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.827" />

        <TextView
            android:id="@+id/name"
            android:layout_width="177dp"
            android:layout_height="25dp"
            android:layout_marginStart="32dp"
            android:fontFamily="@font/roboto"
            android:text="@string/kode"
            android:textColor="@color/colorGrey"
            android:textSize="20sp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.089" />

        <TextView
            android:id="@+id/price"
            android:layout_width="60dp"
            android:layout_height="19dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto"
            android:text="price"
            android:textColor="@color/colorGrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.881"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/model" />


    </androidx.constraintlayout.widget.ConstraintLayout>



    <ImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/ic_baseline_play_circle_filled_24" />


</androidx.cardview.widget.CardView>